Fix spacing issue

--- a/_sass/feature.scss
+++ b/_sass/feature.scss
@@ -80,6 +80,7 @@
 }
 @media(min-width: 992px) {
   .feature-list {
+    margin-top: 4vh;
     float: left;
     width: 32%;
     max-width: 100%;
@@ -101,7 +102,7 @@
   margin-right: auto;
   padding: 1.2rem;
   // Keeps them from collapsing
-  min-height: 125px;
+  min-height: 110px;
   // Keeps them from getting too tall
   max-height: 150px;
   height: 20vh;
@@ -113,7 +114,8 @@
   .feature-list .feature {
     margin-left: 3vh;
     margin-right: 3vh;
-    margin-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 4vh;
     max-width: 100%;
     max-height: 100%;
   }
